# labnotebooks

./: .gitignore  README.md
Denizhan.Pak/: CMakeLists.txt  TODO.txt  labbook  output.txt
Denizhan.Pak/Compilation/: compile.sh
Denizhan.Pak/Data/: Pop_20g_20c.csv  Pop_250g_allc.csv  Pop_500g_30c.csv
Denizhan.Pak/Functions/u_inc_gam/: Log.2.6.2017-15:10:52  Log.2.6.2017-15:11:35  Log.5.6.2017-14:24:21  accurracy_test  accurracy_test.c  makefile  script.py
Denizhan.Pak/Labbook/: notes.dvi  notes.tex
Denizhan.Pak/Log_Files/05.16.2017/: Log.txt
Denizhan.Pak/Log_Files/rfpProbs/: RFP_probability1.csv
Denizhan.Pak/Log_Files/sim_genomes/: ROCNotSim.fasta  ROCSim.fasta
Denizhan.Pak/Logs/: simulated_phi_file_500_genes.csv  simulated_rfp_file_500_genes.csv
Denizhan.Pak/Logs/gamma_testing/: Log.31.5.2017-14:41
Denizhan.Pak/Logs/mcmc_test_files/: phiValuesPop.csv
Denizhan.Pak/Notes/: labbook.glo  notes.dvi  notes.tex  notes.tex.backup
Denizhan.Pak/Notes/wiki/: PANSE_Wiki.tex
Denizhan.Pak/Plotting/: graph.R  testRFPJeremy2.R
Denizhan.Pak/Readings/: 2017.07.11_series.approximation.of.sigma.g.in.PANSE.nb
Denizhan.Pak/Readings/Dr_Gilchrist/: div_0_advice  div_0_advice.tex
Denizhan.Pak/Scripts/: Genome_Data_editor.02.py  Genome_Data_editor.py  data_edit.py  phi_file_20codons_20genes.csv  rfp_file_20codons_20genes.csv
Denizhan.Pak/Scripts/Data_Editing/: AddPosition.py  MakeGenomeFromPhi.py  (+6 more)
Denizhan.Pak/my_copies/: CodonTable.cpp
Denizhan.Pak/my_functions/: generalize_integral.c  igamma.c  junk.c  main.c  makefile  mygamma.c  test  test.c  tmp.txt
(+249 files in other folders)
